# Shepherding

./: .gitignore  CLAUDE.md  CMakeLists.txt  REQUIREMENTS.md  SETUP.md
.github/workflows/: ci.yml  web-simulator-ci.yml
InputFiles/: Config.xml  Config_Adversarial.xml
ShepherdingLibC/: AdversarialBehaviors.cpp  AdversarialBehaviors.h  Behaviors.cpp  Environment.h  Flock.cpp  Modules.cpp  SheepAgent.cpp  SheepDogAgent.h  ShepherdingLibC.cpp  Vector2.h  stdafx.cpp  stdafx.h
ShepherdingSimC_V1/: AdversarialController.cpp  AdversarialController.h  ConfigLoaderPortable.cpp  ConfigLoaderPortable.h  Experiment.cpp  Experiment.h  Vector2.h  main_headless.cpp  wasm_bindings.cpp
docs/: base_model_notes.md  decisions.md  web_simulator_validation.md
docs/replay/: index.html
docs/simulator/: index.html  shepherd_sim_web.js  shepherd_sim_web.wasm
results/: REPORT.md  behaviour_usage.csv  perstep.csv  results.csv
tests/: t0_regression.sh  unit_tests.cpp
tests/baseline/: README.md  T0_Config_OutPutData.csv  T0_sha256.txt
tools/: make_replay.py  native_battery.py  plot.py  wasm_battery.js
